<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/detail_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:textSize="24sp"
        android:text="@string/movie_title_text"
        android:textAlignment="center"
        />
    <ImageView
        android:id="@+id/detail_image_view_backdrop"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:layout_below="@+id/detail_text_view_title"
        android:contentDescription="@string/movie_title_text"
        android:src="@drawable/poster_placeholder"
        />
    <TextView
        android:id="@+id/detail_text_view_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_image_view_backdrop"
        android:padding="8dp"
        android:textSize="16sp"
        android:text="@string/movie_genre_text"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/detail_text_view_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_text_view_genres"
        android:padding="8dp"
        android:textSize="16sp"
        android:text="@string/movie_overview_text"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/detail_text_view_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_text_view_overview"
        android:padding="8dp"
        android:textSize="16sp"
        android:text="@string/movie_cast_text"
        android:textAlignment="center"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_text_view_actors"
        >
        <TextView
            android:id="@+id/detail_text_view_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:text="@string/movie_year_text"
            />
        <TextView
            android:id="@+id/detail_text_view_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:textSize="16sp"
            android:text="@string/movie_rating_text"
            />
    </RelativeLayout>
</RelativeLayout>