<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/filter_text_view_date"
            android:text="@string/filter_release_date_text"
            android:layout_alignParentTop="true"
            style="@style/FilterSectionTitle"
            />
        <LinearLayout
            android:id="@+id/layout_release_dates"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_text_view_date"
            android:layout_centerHorizontal="true"
            >
            <NumberPicker
                android:id="@+id/release_date_gte_picker"
                style="@style/FilterDatePicker"
                >
            </NumberPicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/filter_date_divider_text"
                android:textStyle="bold"
                />
            <NumberPicker
                android:id="@+id/release_date_lte_picker"
                style="@style/FilterDatePicker"
                >
            </NumberPicker>
        </LinearLayout>
        <TextView
            android:id="@+id/filter_text_view_genre"
            android:text="@string/filter_genre_text"
            android:layout_below="@+id/layout_release_dates"
            style="@style/FilterSectionTitle"
            />
        <RelativeLayout
            android:id="@+id/layout_spinner_genre"
            android:layout_below="@+id/filter_text_view_genre"
            style="@style/SpinnerLayout"
            >
            <Spinner
                android:id="@+id/filter_spinner_genre"
                android:entries="@array/filter_genres_names"
                style="@style/FilterSpinner"
                />
            <ImageView
                android:contentDescription="@string/filter_spinner_dropdown_text"
                style="@style/SpinnerDrop"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/filter_text_view_sort_order"
            android:text="@string/filter_sort_order_text"
            android:layout_below="@+id/layout_spinner_genre"
            style="@style/FilterSectionTitle"
            />
        <RelativeLayout
            android:id="@+id/layout_spinner_sort_order"
            android:layout_below="@+id/filter_text_view_sort_order"
            style="@style/SpinnerLayout"
            >
            <Spinner
                android:id="@+id/filter_spinner_sort_order"
                android:entries="@array/filter_sort_order_names"
                style="@style/FilterSpinner"
                />
            <ImageView
                android:contentDescription="@string/filter_spinner_dropdown_text"
                style="@style/SpinnerDrop"
                />
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/layout_spinner_sort_order"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tmdb_logo"
            android:contentDescription="@string/filter_tmdb_logo_text"
            />
    </RelativeLayout>
</ScrollView>