<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Основные сведения: название, картинка, год, жанр, оценка-->
        <RelativeLayout
            android:id="@+id/layout_main_info"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:text="@string/app_name"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <ImageView
                android:id="@+id/image_view_backdrop"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:layout_below="@+id/text_view_title"
                android:contentDescription="@string/movie_title_text"
                android:src="@drawable/poster_placeholder"
                />
            <TextView
                android:id="@+id/text_view_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryTransparent"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorBackground"
                android:textSize="16sp"
                android:padding="8dp"
                android:visibility="visible"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_main_info"
            >
            <Button
                android:id="@+id/button_details"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/button_details"
                style="@style/ButtonText"
                />
            <Button
                android:id="@+id/button_add"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/button_want_to_watch_text"
                android:textStyle="bold"
                style="@style/ButtonText"
                />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>